--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: book
 number-sections: true
 crossref:
-  fig-prefix: Figura   # (default is "Figure")
+  fig-prefix: Figura
   custom:
     - kind: float
       reference-prefix: Figura
