--- a/.github/workflows/update-branches.yml
+++ b/.github/workflows/update-branches.yml
@@ -17,16 +17,19 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
+      - name: Checkout manual_gestor branch (or create if it doesn't exist)
+        run: |
+          git fetch origin
+          # Cria ou faz checkout na branch manual_gestor
+          git checkout -B manual_gestor origin/manual_gestor || git checkout --orphan manual_gestor
+
       - name: Copy output_gestor to manual_gestor
         run: |
-          # Cria ou atualiza a branch manual_gestor
-          git fetch origin
-          git checkout -B manual_gestor
+          # Copia apenas os arquivos de output_gestor para a branch manual_gestor
+          cp -r manual_gestor/output_gestor/* ./manual_gestor/
 
-          # Copia os arquivos da pasta output_gestor
-          cp -r manual_gestor/output_gestor/* manual_gestor/
-
-          # Adiciona as alterações, faz o commit e envia para a branch manual_gestor
+      - name: Commit and push changes to manual_gestor
+        run: |
           git add .
           git commit -m "Update manual_gestor with the latest output_gestor"
           git push origin manual_gestor
@@ -42,16 +45,19 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
+      - name: Checkout manual_instituicao branch (or create if it doesn't exist)
+        run: |
+          git fetch origin
+          # Cria ou faz checkout na branch manual_instituicao
+          git checkout -B manual_instituicao origin/manual_instituicao || git checkout --orphan manual_instituicao
+
       - name: Copy output_instituicao to manual_instituicao
         run: |
-          # Cria ou atualiza a branch manual_instituicao
-          git fetch origin
-          git checkout -B manual_instituicao
+          # Copia apenas os arquivos de output_instituicao para a branch manual_instituicao
+          cp -r manual_instituicao/output_instituicao/* ./manual_instituicao/
 
-          # Copia os arquivos da pasta output_instituicao
-          cp -r manual_instituicao/output_instituicao/* manual_instituicao/
-
-          # Adiciona as alterações, faz o commit e envia para a branch manual_instituicao
+      - name: Commit and push changes to manual_instituicao
+        run: |
           git add .
           git commit -m "Update manual_instituicao with the latest output_instituicao"
           git push origin manual_instituicao
@@ -67,16 +73,19 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
+      - name: Checkout manual_responsavel branch (or create if it doesn't exist)
+        run: |
+          git fetch origin
+          # Cria ou faz checkout na branch manual_responsavel
+          git checkout -B manual_responsavel origin/manual_responsavel || git checkout --orphan manual_responsavel
+
       - name: Copy output_responsavel to manual_responsavel
         run: |
-          # Cria ou atualiza a branch manual_responsavel
-          git fetch origin
-          git checkout -B manual_responsavel
+          # Copia apenas os arquivos de output_responsavel para a branch manual_responsavel
+          cp -r manual_responsavel/output_responsavel/* ./manual_responsavel/
 
-          # Copia os arquivos da pasta output_responsavel
-          cp -r manual_responsavel/output_responsavel/* manual_responsavel/
-
-          # Adiciona as alterações, faz o commit e envia para a branch manual_responsavel
+      - name: Commit and push changes to manual_responsavel
+        run: |
           git add .
           git commit -m "Update manual_responsavel with the latest output_responsavel"
           git push origin manual_responsavel
