--- a/.github/workflows/split-branches.yml
+++ b/.github/workflows/split-branches.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Git user
+      run: |
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+
     - name: Create manual_gestor branch
       run: |
         git checkout -b manual_gestor
